tests/negative/typecheck/conditional.orng
// conditional.orng:5:22: error: expected a value of type `Int`, got a value of type `Bool`
// fn main() -> Int {0 < 1}
//                     ^
// 
fn main() -> Int {0 < 1}